# exasphere

./: .clang-format  .gitattributes  .gitignore  .tokeignore  AGENTS.md  CMakeLists.txt  DESIGN.md  README.md  WORKLOG.md  build.zig  build.zig.zon  flake.nix  shell.nix
.github/workflows/: cpp-ci.yml  manual-vm-proof.yml
.omx/plans/: open-questions.md  prd-m21-simulator-first-teaching-surface.md  prd-m23-packaged-teaching-distribution.md  prd-multi-horizon-zig-scheduler-roadmap.md  test-spec-m21-simulator-first-teaching-surface.md  test-spec-m23-packaged-teaching-distribution.md
artifacts/task-9-cleanup/: artifact-index.tsv  baseline-local-state.txt  delete-local-paths.txt  evidence-validation.txt  gh-run-28606271556.jsonl  github-runner-delete.txt  github-runner-inventory-before.txt  no-host-mutation-gate.txt  post-cleanup-verification-final.txt  pre-delete-runner-safe-excerpts.txt  runner-metadata-safe.json  stop-local-runner.txt
bpf/: README.md  mem_monitor.bpf.c  sched_monitor.bpf.c  vmlinux.h  zigsched_minimal.bpf.c
bpf/include/: zigsched_common.h
cmake/: advisor.cmake  bpf.cmake  core.cmake  daemon.cmake  memory.cmake  pipeline.cmake  sched.cmake  viz.cmake
design/: .design-canvas.state.json  live-app.jsx  live-bridge.js  live-data.jsx  live-panes.jsx  live-tokens.jsx  live-views.jsx  zig-scheduler-live-vm-lab.html
docs/: analysis-workflow.md  backend-capability-matrix.md  benchmark-workflow.md  ci.md  contract-inventory.md  curated-linux-observability.md  deadline-policy.md  desktop-webview.md  extension-boundary.md  fairness-probes.md  future-directions.md  group-scheduling.md  library-sdk.md  linux-mapping.md  lts-simulator-lab-release-plan.md  m10-deadline-policy.md  m14-extension-boundary.md  m17-scenario-corpus.md  m19-curated-linux-observability.md  m21-simulator-first-teaching-surface.md  m22-library-sdk.md  m31-m32-contract-inventory.md  m4-analysis-workflow.md  m45-benchmark-workflow.md  performance-gates.md  phase1-blocker-status.md  phase1-signoff-report.md  phase1-simulator.md  phase1-verification-checklist.md  project-architecture-and-status.md  property-testing.md  quality-gates.md  release-checklist.md  report-pipeline.md  research-sandbox.md  scenario-c-walkthrough.md  scenario-corpus.md  scenario-generator-workflow.md  scheduler-semantics-v2.md  simulator-first-teaching-surface.md  (+9 more)
docs/adr/: 0001-m5-project-identity.md  0001-project-identity.md  0001-sched-ext-production-claim-boundary.md  0002-linux-observability-gate.md  0002-loader-architecture.md  0002-m18-linux-observability-gate.md  0003-m25-productionization-gate.md  0003-non-vm-operation-gate.md  0004-bpf-abi-strategy.md  0004-live-vm-desktop-webview-dependency.md  0004-lts-simulator-lab-release.md
docs/benchmarks/: m45-baselines.json  m45-baselines.md
docs/control/: daemon-openrpc.json  frontend-api-pack.md  incident-taxonomy.md  matrix-run-contract.md  schema-compatibility.md  stream-semantics.md
docs/courseware/: assignment-pack-01.md  instructor-guide.md  student-onboarding.md  teaching-distribution.md
docs/labs/: reproducible-report-pack.md  simulator-teaching-pack.md
docs/releases/: governance-gate.md  supported-kernel-tuples.md
docs/research/: scheduler-backend-next-milestones.md
docs/rewrite/: ADVISOR.md  ARCHITECTURE.md  COLLECTORS.md  IMPLEMENTATION_PLAN.md  NIX_DEV_ENV.md  SAFETY.md  VISUALIZATION.md
docs/roadmap/: README.md  prd-multi-horizon-zig-scheduler-roadmap.md  test-spec-multi-horizon-zig-scheduler-roadmap.md
evidence/: bpf-live-validation.md  independent-code-review.md  timeline-streaming-stress.md  vm-live-validation.md
nix/: xsprof.nix
packaging/: README.md  build_package.sh
qa/: audit_ledger_check.py  backend_capability_matrix_check.py  backend_capability_matrix_expected.json  benchmark_output_check.py  benchmark_output_io.py  benchmark_output_model.py  benchmark_output_parse.py  benchmark_output_privacy.py  benchmark_output_selftest.py  benchmark_output_validate.py  bpf_abi_cgroup_model.py  bpf_abi_freeze_check.py  bpf_abi_model.py  bpf_abi_parse.py  bpf_abi_selftest.py  bpf_abi_validate.py  bpf_artifacts.py  bpf_metadata_repro_check.py  bpf_static_check.sh  clean_archive_check.sh  cli_help_contract.sh  consumer_contract_check.py  control_schema_drift_check.py  daemon_event_contract_check.py  daemon_golden_transcript_check.py  evidence_bundle_compare_check.py  evidence_bundle_compare_selftest.py  evidence_bundle_paths.py  evidence_manifest_check.py  evidence_manifest_selftest.py  evidence_safety_check.py  final_manual_qa.sh  frontend_contract_matrix_ref.py  frontend_contract_pack_check.py  frontend_contract_pack_selftest.py  frontend_contract_pack_semantics.py  frontend_contract_pack_types.py  golden_fixture_lifecycle_check.py  governance_manifest_check.py  json_field_check.py  (+84 more)
simulator/: AGENTS.md  build.zig  build.zig.zon
src/: daemon_main.zig  lib.zig  main.zig  preflight_main.zig  root.zig  sim_cli_app.zig
tests/: advisor_tests.cpp  bpf_loader_tests.cpp  cli_tests.cpp  daemon_tests.cpp  json_tests.cpp  live_capture_tests.cpp  memory_collector_tests.cpp  pipeline_tests.cpp  privacy_tests.cpp  proc_tests.cpp  safety_tests.cpp  sched_collector_tests.cpp  schema_tests.cpp  selftest.cpp  test_main.cpp  viz_tests.cpp
tools/: bpf_metadata.sh  bpf_metadata_cgroup.py  bpf_metadata_emit.py  build_bpf.sh  daemon_socket_rpc_assertions.py  daemon_socket_rpc_test.py  daemon_stdio_assert.py  daemon_stdio_test.sh  live_controller_hung_daemon.py  live_controller_timeout_test.py  live_vm_desktop_e2e.py  live_vm_desktop_failure_daemon.py  live_vm_desktop_failure_matrix.py  live_vm_desktop_qa.py  live_vm_json_helpers.py  live_vm_web_server.py  live_vm_web_server_smoke.py  tui_authoritative_contract_check.py  tui_live_vm_cleanup.py  tui_live_vm_pty_test.py  tui_pty_authoritative_daemon.py  tui_pty_authoritative_frames.py  tui_pty_daemon_matrix.py  tui_pty_delayed_live.py  tui_pty_exit_test.py  tui_pty_io.py  tui_pty_live_control_expectations.py  tui_pty_live_controls.py  tui_pty_malformed_redaction.py  tui_pty_process_ownership.py  tui_pty_smoke.py
(+791 files in other folders)
